--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "google": "^2.1.0",
+    "google-maps-api-loader": "^1.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
